public/css/style.less
/* ... */
@media (max-width: 640px) {
  .mobile {
    display: none;
  }
  .make.medium,
  .make.large,
  #banner-join {
    font-size: 16px;
    width: 100%;
  }
  #banner-join {
    text-align: left;
    height: auto;
    .sign-up-span {
      display: none;
    }
    h1 {
      margin-top: 0;
    }
  }
  .make.large {
    .height( 3 );
  }
}

/*********************************************************
 * PARTY
 */

.party-banner {
  min-height: auto;
  .border-top-radius(25px);
  border-radius: 50px;
}

.party-partners {
  display: inline-block;
  padding-right: 50px;
}

.party-up-to-date {
  width: 230px;
  height: 200px;
  background-color: @blue;
  position: relative;
  ul {
    list-style: none;
    position: relative;
    top: 25px;
    left: 10px;
    li {
      line-height: 45px;
      a {
        font-family: 'Open Sans Light';
        font-size: 20px;
        color: #FFF;
      }
    }
  }
}

.party-hosts {
  text-align: center;

  h3 {
    text-align: left;
  }

  img {
    width: 50%;
  }
}

#party {
  h1, h2{
    color: @green;
  }

  h3 {
    margin: 0;
    font-size: 18px;
  }
  #content {
    .commitment-carousel {
      background-color: @lightgrey;
      padding: 5px;

      img {
        border-radius: 50em;
        width: 87px;
        float: left;
        margin-right: 10px;
      }

      p {
        font-size: 1.1em;
      }

      a {
        text-decoration: none;
        &:hover {
          text-decoration: underline;
        }
      }
    }

    .commitment-list-column {
      ul {
        padding-left: 20px;
        margin: 0;
        font-size: 0.9em;
        font-family: 'Open Sans Light';

        h4 {
          margin: 0;
        }

        a {
          text-decoration: none;
          &:hover {
            text-decoration: underline;
          }
        }
      }
    }
    a {
      text-decoration: underline;
    }
    .download {
      text-decoration: none;
      &:hover {
        text-decoration: underline;
      }
    }
  }
}


.makers-making {
  width: 500px;
}

.maker-party-logo {
  width: 160px;

  img {
    width: auto;
  }
}

/*********************************************************
 * ABOUT
 */
.about-hello {
  p {
    width: 500px;
  }
  img {
    float: right;
    margin-left: 20px;
  }


}

#about {
  .about-whatwedo {
    i {
      color: @green;
      margin-right: 10px;
      top: 5px;
      position: relative;
    }
  }

  h3 {
    font-size: 18px;
  }
}

/*********************************************************
 * MENTOR
 */

#mentor {

  .the-mentors {
    background-color: #e3ebee;
    border-radius: 5px;
    box-sizing: border-box;
    padding-top: 20px;
    .border-box;
  }
  .mentor-profile {
    h3 {
      font-size: 20px;
      position: relative;
      left: 10px;
      margin: 0;
      padding: 0;
    }

    .mentor-header {
      margin-bottom: 10px;
      padding: 0 8px;
      height: 90px;
    }

    span {
      position: relative;
      font-size: 0.9em;
      font-style: italic;
      left: 10px;
      width: 3px;
    }

    p {
      margin: 0;
      padding: 0 8px;
      padding-bottom: 5px;
    }

    img {
      width: 75px;
      border-radius: 50em;
      float: left;
    }
  }

  .mentors-connect {
    list-style: none;

    p {
      margin: 0 20px;
    }

    i {
      font-size: 30px;
      color: @green;
      float: left;
    }

    h3 {
      position: relative;
      font-size: 20px;
      padding: 0 0 0 5px;
      margin: 0;
      display: inline-block;
    }
  }
}

/*********************************************************
 * GET INVOLVED
 */

#getinvolved {
  .communicate {
    list-style: disc;
  }
  .getinvolved-list {
    list-style: none;
    padding: 0;

    li {
      padding: 5px 0;
    }
    p {
      margin: 0 20px;
    }

    i {
      font-size: 30px;
      color: @green;
      float: left;
    }

    h3 {
      position: relative;
      font-size: 20px;
      padding: 0 0 0 15px;
      margin: 0;
      display: inline-block;
    }
  }
}

/*********************************************************
 * TOOLS
 */
#tools {

  .ui-wrapper {
    margin: 10px auto 0 auto;
  }
  .ui-section {
    padding: 0;
  }
  .column-tools {
    display: inline-block;
    position: relative;
    float: left;
    margin-right: 20px;
    padding: 30px 20px 0 20px;
    height: 525px;
    width: 48%;
    .border-box;

    header {
      margin: 0 auto;
      position: relative;
      padding-left: 50px;
      display: block;
      height: auto;
      img {
        float: left;
        margin-right: 30px;
        height: 75px;
      }

      p {
        margin-top: 20px;
      }

      .popcorn {
        position: relative;
        top: -3px;
      }
      h2 {
        font-size: 38px;
        margin: 0;
      }

      h3 {
        font-size: 20px;
        font-weight: 300;
      }
    }
    .or {
      background-color: @lightgrey;
      display: inline-block;
      text-align: center;
      border-radius: 50px;
      width: 30px;
      height: 30px;
      line-height: 30px;
      margin: 0 10px;
    }
    ul {
      margin-top: 0;
      padding-left: 20px;
    }

    h3 {
      font-size: 18px;
      margin-bottom: 0;
    }

    .tools-action {
      position: absolute;
      bottom: 10px;
      left: 10px;
      width: 100%;

      .btn-container {
        display: inline-block;
        position: static;

        .ui-btn {
          width: 205px;
        }

        .remix-btn {
          background-color: @blue;
        }

        .fork-btn-label {
          border: none;
        }
      }
    }
  }
}
/* ... */

